# honeybadger

./: README.md
examples/AndroidDemo/: .gitignore  settings.gradle
examples/AndroidDemo/app/: build.gradle
examples/AndroidDemo/app/src/main/: AndroidManifest.xml
examples/AndroidDemo/app/src/main/java/com/honeybadger/androiddemo/data/: LoginDataSource.java  LoginRepository.java  Result.java
examples/AndroidDemo/app/src/main/res/layout/: activity_login.xml
examples/AndroidDemo/app/src/main/res/values/: strings.xml  themes.xml
examples/AndroidDemo/app/src/main/res/values-night/: themes.xml
examples/AndroidDemo/nativelib1/: build.gradle
examples/AndroidDemo/nativelib1/src/main/cpp/: CMakeLists.txt  nativelib1.cpp
examples/AndroidDemo/nativelib1/src/main/java/com/honeybadger/nativelib/: NativeLib1.java
examples/pluginDemo/: .gitignore  CMakeLists.txt  library.h
examples/pluginDemo/hb_headers/AndroidClass/include/: Array_Objects.h  Array_android_content_pm_Signature.h  Array_java_lang_StackTraceElement.h  Array_java_lang_String.h  DebuggerInterface.h  EntryInterface.h  HBBizInterface.h  HBMethodIdBlocks.h  IClassManager.h  IConfigManager.h  IHBApplicationInfo.h  ISimulateClass.h  MAC_Info.h  SimulateAndroidVersion.h  VA_JByteArray.h  VA_JIntArray.h  VA_JLongArray.h  android_animation_PropertyValuesHolder.h  android_app_Activity.h  android_app_ActivityManager.h  android_app_ActivityManagerNative.h  android_app_ActivityManagerProxy.h  android_app_ActivityManager_MemoryInfo.h  android_app_ActivityThread.h  android_app_Application.h  android_app_KeyguardManager.h  android_app_NativeActivity.h  android_app_Service.h  android_app_admin_SecurityLog_SecurityEvent.h  android_app_backup_FullBackup.h  android_backup_BackupDataInput.h  android_backup_BackupDataOutput.h  android_backup_BackupHelperDispatcher.h  android_backup_FileBackupHelperBase.h  android_content_ContentResolver.h  android_content_Context.h  android_content_SharedPreferences.h  android_content_SharedPreferences_Editor.h  android_content_pm_ApplicationInfo.h  android_content_pm_PackageInfo.h  (+252 more)
examples/pluginDemo/hb_headers/CommTools/include/: ARM.h  ArmReg.h  CPublicUtil.h  CommToolsHeader.h  IceRandom.h  IceRegister.h  PreDefine.h
examples/pluginDemo/include/: IRestrictedListener.h  PluginCommHeader.h  PluginExportsDefines.h
examples/pluginDemo/src/: CBizWorker.cpp  CBizWorker.h  PluginExport.cpp  PluginExport.h
examples/pluginDemo/src/BizJavaCls/: com_honeybadger_nativelib_NativeLib1.cpp  com_honeybadger_nativelib_NativeLib1.h
(+7 files in other folders)
